@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023,2025 Contributors to the Eclipse Foundation.
+ * Copyright (c) 2023, 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2010, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -32,17 +32,25 @@ import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.project.MavenProject;
 import org.apache.maven.project.MavenProjectBuilder;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
 import java.io.StringReader;
 import java.lang.reflect.Method;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.concurrent.CountDownLatch;
 
 /**
  * @author bhavanishankar@dev.java.net
@@ -69,7 +77,7 @@ public abstract class AbstractServerMojo extends AbstractMojo {
 
     private static final String GF_API_GROUP_ID = "org.glassfish.main.common";
     private static final String GF_API_ARTIFACT_ID = "simple-glassfish-api";
-    private static final String DEFAULT_GF_VERSION = "7.0.0";
+    private static final String DEFAULT_GF_VERSION = "8.0.0";
     private static String gfVersion;
 
     /*******************************************
@@ -240,6 +248,33 @@ public abstract class AbstractServerMojo extends AbstractMojo {
     @Parameter(property = "glassfish.version", alias = "glassfish.version")
     protected String glassfishVersion;
 
+    /**
+     * Additional JVM arguments to pass when launching GlassFish in a forked JVM.
+     * <p/>
+     * For example:
+     * <pre>
+     * &lt;vmArgs&gt;
+     *      &lt;vmArg&gt;-Xmx512m&lt;/vmArg&gt;
+     *      &lt;vmArg&gt;-Dmy.property=value&lt;/vmArg&gt;
+     * &lt;/vmArgs&gt;
+     * </pre>
+     */
+    @Parameter
+    protected List<String> vmArgs;
+
+    /**
+     * Additional JVM arguments to pass when launching GlassFish in a forked JVM,
+     * as a space-separated string. Intended for command-line use.
+     * Arguments specified here are merged with those in {@code vmArgs}.
+     * <p/>
+     * For example:
+     * <pre>
+     * mvn embedded-glassfish:start -Dglassfish.vm.args="-Xmx512m -Dmy.property=value"
+     * </pre>
+     */
+    @Parameter(property = "glassfish.vm.args")
+    protected String vmArgsProperty;
+
     /*===============================================
      * End of parameters supplied by configuration
      ***********************************************/
@@ -296,6 +331,12 @@ public abstract class AbstractServerMojo extends AbstractMojo {
     protected static HashMap<String, ClassLoader> classLoaders = new HashMap();
     private static ClassLoader classLoader;
 
+    // Forked GlassFish process state — shared across all goals within a single build
+    private static Process forkedProcess;
+    private static BufferedWriter forkedWriter;
+    private static BufferedReader forkedReader;
+    private static volatile CountDownLatch commandLatch;
+
     public abstract void execute() throws MojoExecutionException, MojoFailureException;
 
     protected ClassLoader getClassLoader() throws MojoExecutionException {
@@ -338,13 +379,17 @@ public abstract class AbstractServerMojo extends AbstractMojo {
     }
 
     private void printClassPaths(String msg, ClassLoader classLoader) {
-        System.out.println(msg);
         ClassLoader cl = classLoader;
         while (cl != null && cl instanceof URLClassLoader) {
-            for (URL u : ((URLClassLoader) cl).getURLs()) {
-                System.out.println("ClassPath Element : " + u);
-            }
+            printClassPaths(msg, ((URLClassLoader) cl).getURLs());
             cl = cl.getParent();
+        }
+    }
+
+    private void printClassPaths(String msg, URL... urls) {
+        System.out.println(msg);
+        for (URL u : urls) {
+            System.out.println("ClassPath Element : " + u);
         }
     }
 
@@ -428,19 +473,30 @@ public abstract class AbstractServerMojo extends AbstractMojo {
     }
 
     private ClassLoader getUberGFClassLoader() throws Exception {
-        // Use the version user has configured in the plugin.
         Artifact gfUber = getUberFromSpecifiedDependency();
-        ClassLoader cl = getClass().getClassLoader();
-        if (gfUber == null) { // not specified as dependency, hence not there in the classloader cl.
-            Artifact gfMvnPlugin = (Artifact) project.getPluginArtifactMap().get(thisArtifactId);
-            String gfVersion = getGlassfishVersion(gfMvnPlugin); // get the same version of uber jar as that of simple-glassfish-api used while building this plugin.
-            gfUber = factory.createArtifact(EMBEDDED_GROUP_ID, EMBEDDED_ALL,
-                    gfVersion, "compile", "jar");
-            resolver.resolve(gfUber, remoteRepositories, localRepository);
-            cl = new URLClassLoader(
-                    new URL[]{gfUber.getFile().toURI().toURL()}, getClass().getClassLoader());
+        if (gfUber != null) {
+            return getClass().getClassLoader();
         }
-        return cl;
+        return new URLClassLoader(
+                new URL[]{resolveGlassFishArtifact().getFile().toURI().toURL()},
+                getClass().getClassLoader());
+    }
+
+    /**
+     * Resolves the GlassFish embedded-all artifact, either from a plugin dependency
+     * already specified by the user, or by downloading the appropriate version.
+     *
+     * @return the resolved GlassFish embedded-all artifact
+     */
+    private Artifact resolveGlassFishArtifact() throws Exception {
+        Artifact gfUber = getUberFromSpecifiedDependency();
+        if (gfUber == null) {
+            Artifact gfMvnPlugin = (Artifact) project.getPluginArtifactMap().get(thisArtifactId);
+            String version = getGlassfishVersion(gfMvnPlugin);
+            gfUber = factory.createArtifact(EMBEDDED_GROUP_ID, EMBEDDED_ALL, version, "compile", "jar");
+            resolver.resolve(gfUber, remoteRepositories, localRepository);
+        }
+        return gfUber;
     }
 
     protected Properties getGlassFishProperties() {
@@ -577,6 +633,207 @@ public abstract class AbstractServerMojo extends AbstractMojo {
 //        String fs = File.separator;
 //        return new File(installRoot, "domains" + fs + "domain1").getAbsolutePath();
 //    }
+
+    /**
+     * Returns the plugin's own jar file by scanning the {@code plugin.artifacts} list,
+     * which contains resolved artifacts including the plugin itself.
+     * This is more reliable than {@code getPluginArtifactMap()} which may return an
+     * unresolved artifact with a null file during integration tests.
+     */
+    protected File getPluginJar() throws MojoExecutionException {
+        Object pluginArtifactObj = project.getPluginArtifactMap().get(thisArtifactId);
+        if (pluginArtifactObj instanceof Artifact) {
+            Artifact pluginArtifact = (Artifact) pluginArtifactObj;
+            if (pluginArtifact.getFile() != null) {
+                return pluginArtifact.getFile();
+            }
+        }
+        // Fallback: scan plugin.artifacts which contains resolved artifacts including the plugin itself
+        if (artifacts != null) {
+            for (Artifact artifact : artifacts) {
+                if (thisArtifactId.equals(artifact.getGroupId() + ":" + artifact.getArtifactId())) {
+                    File file = artifact.getFile();
+                    if (file != null) {
+                        return file;
+                    }
+                }
+            }
+        }
+        throw new MojoExecutionException("Could not locate plugin jar");
+    }
+
+    /**
+     * Resolves the GlassFish embedded-all jar file without creating a ClassLoader.
+     * Used by the fork mode to assemble the child JVM classpath.
+     *
+     * @return the resolved GlassFish embedded-all jar file
+     */
+    protected File getGlassFishJar() throws Exception {
+        return resolveGlassFishArtifact().getFile();
+    }
+
+    /**
+     * Writes bootstrap and GlassFish properties to a temporary config file for the forked JVM.
+     * Keys are prefixed with {@code bootstrap.} or {@code glassfish.prop.} to allow the runner
+     * to separate them on load.
+     *
+     * @param bootstrapProps bootstrap properties
+     * @param glassfishProps GlassFish properties
+     * @return the written temp file
+     */
+    protected File writeForkedConfig(Properties bootstrapProps, Properties glassfishProps) throws Exception {
+        Properties config = new Properties();
+        config.setProperty(GlassFishForkedRunner.SECTION_SERVER_ID, serverID);
+        for (String key : bootstrapProps.stringPropertyNames()) {
+            config.setProperty(GlassFishForkedRunner.SECTION_BOOTSTRAP + key,
+                    bootstrapProps.getProperty(key));
+        }
+        for (String key : glassfishProps.stringPropertyNames()) {
+            config.setProperty(GlassFishForkedRunner.SECTION_GLASSFISH + key,
+                    glassfishProps.getProperty(key));
+        }
+        File configFile = File.createTempFile("glassfish-maven-embedded-plugin-forked-", ".properties");
+        configFile.deleteOnExit();
+        try (FileOutputStream fos = new FileOutputStream(configFile)) {
+            config.store(fos, "GlassFish forked runner config");
+        }
+        return configFile;
+    }
+
+    /**
+     * Returns true if GlassFish was started in a forked JVM by the start goal.
+     * Other goals use this to decide whether to communicate via stdin/stdout or in-process.
+     */
+    protected boolean isForkedMode() {
+        return forkedWriter != null;
+    }
+
+    /**
+     * Forks a new JVM running {@link GlassFishForkedRunner}, waits for the {@code READY} signal,
+     * then stores the process and streams in static fields for use by subsequent goals.
+     */
+    protected void startForkedGlassFish() throws Exception {
+        Properties bootstrapProps = getBootStrapProperties();
+        Properties glassfishProps = getGlassFishProperties();
+
+        File configFile = writeForkedConfig(bootstrapProps, glassfishProps);
+
+        File gfJar = getGlassFishJar();
+        File pluginJar = getPluginJar();
+        String classpath = pluginJar.getAbsolutePath() + File.pathSeparator + gfJar.getAbsolutePath();
+
+        String javaExecutable = ProcessHandle.current().info().command()
+                .orElseGet(() -> System.getProperty("java.home") + File.separator + "bin"
+                        + File.separator + "java");
+
+        printClassPaths("Launching GlassFish in a separate JVM, with the following ClassPath = ",
+                pluginJar.toURI().toURL(),
+                gfJar.toURI().toURL());
+
+        List<String> command = new ArrayList<>();
+        command.add(javaExecutable);
+        addArgumentsFromConfig(command);
+        command.add("--add-opens=java.base/java.io=ALL-UNNAMED");
+        command.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
+        command.add("--add-opens=java.base/java.util=ALL-UNNAMED");
+        command.add("--add-opens=java.base/sun.nio.fs=ALL-UNNAMED");
+        command.add("--add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED");
+        command.add("--add-opens=java.naming/javax.naming.spi=ALL-UNNAMED");
+        command.add("--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED");
+        command.add("--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED");
+        command.add("--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED");
+        command.add("--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED");
+        command.add("--add-opens=java.base/jdk.internal.vm.annotation=ALL-UNNAMED");
+        command.add("--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED");
+        command.add("-cp");
+        command.add(classpath);
+        command.add(GlassFishForkedRunner.class.getName());
+        command.add(configFile.getAbsolutePath());
+
+        ProcessBuilder pb = new ProcessBuilder(command);
+        pb.redirectErrorStream(true);
+        forkedProcess = pb.start();
+
+        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+            if (forkedProcess != null && forkedProcess.isAlive()) {
+                forkedProcess.destroyForcibly();
+            }
+        }, "glassfish-forked-process-cleanup"));
+
+        forkedReader = new BufferedReader(new InputStreamReader(forkedProcess.getInputStream()));
+
+        // Wait for READY signal, printing all lines until then (but not the READY line itself)
+        String line;
+        while ((line = forkedReader.readLine()) != null) {
+            if (GlassFishForkedRunner.RESP_READY.equals(line.trim())) {
+                break;
+            }
+            System.out.println(line);
+        }
+        if (!forkedProcess.isAlive()) {
+            throw new Exception("Forked GlassFish process ended before sending READY");
+        }
+
+        // Pump remaining output in background; counts down commandLatch on OK_*/ERROR_* lines
+        Thread pumpThread = new Thread(() -> {
+            try {
+                String pumpLine;
+                while ((pumpLine = forkedReader.readLine()) != null) {
+                    if (pumpLine.startsWith(GlassFishForkedRunner.RESP_OK)
+                            || pumpLine.startsWith(GlassFishForkedRunner.RESP_ERROR)) {
+                        CountDownLatch latch = commandLatch;
+                        if (latch != null) {
+                            latch.countDown();
+                        }
+                    } else {
+                        System.out.println(pumpLine);
+                        System.out.flush();
+                    }
+                }
+            } catch (Exception ignored) {
+            }
+        }, "glassfish-stdout-pump");
+        pumpThread.setDaemon(true);
+        pumpThread.start();
+
+        forkedWriter = new BufferedWriter(new OutputStreamWriter(forkedProcess.getOutputStream()));
+    }
+
+    private void addArgumentsFromConfig(List<String> command) {
+        if (vmArgs != null) {
+            command.addAll(vmArgs);
+        }
+        if (vmArgsProperty != null && !vmArgsProperty.trim().isEmpty()) {
+            for (String arg : vmArgsProperty.trim().split("\\s+")) {
+                command.add(arg);
+            }
+        }
+    }
+
+    /**
+     * Sends a command to the forked GlassFish process via stdin and waits for completion.
+     * Blocks until the pump thread receives an {@code OK_*} or {@code ERROR_*} response line.
+     */
+    protected void sendForkedCommand(String command) throws Exception {
+        commandLatch = new CountDownLatch(1);
+        forkedWriter.write(command);
+        forkedWriter.newLine();
+        forkedWriter.flush();
+        commandLatch.await();
+        commandLatch = null;
+    }
+
+    /**
+     * Sends STOP to the forked GlassFish process and waits for it to exit,
+     * then clears the static forked state.
+     */
+    protected void stopForkedGlassFish() throws Exception {
+        sendForkedCommand(GlassFishForkedRunner.CMD_STOP);
+        forkedProcess.waitFor();
+        forkedProcess = null;
+        forkedWriter = null;
+        forkedReader = null;
+    }
 
     public void startGlassFish(String serverId, ClassLoader cl, Properties bootstrapProperties,
                                Properties glassfishProperties) throws Exception {
